# kyrSQL

./: main.py  pyproject.toml
src/: DBManager.py  hh_api.py
